k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: visual-dm
  labels:
    name: visual-dm
    environment: production
