k8s/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: visual-dm-db
  namespace: visual-dm
  labels:
    app: visual-dm
    component: db
spec:
  type: ClusterIP
  ports:
  - port: 5432
    targetPort: postgresql
    protocol: TCP
    name: postgresql
  selector:
    app: visual-dm
    component: db
