k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: visualdm-app
  namespace: visualdm
spec:
  type: ClusterIP
  selector:
    app: visualdm-app
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
